--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,8 @@
 	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/wsif-2.0/lib/xmlParserAPIs-2_2_1.jar"/>
 	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/wsif-2.0/build/lib/wsif.jar"/>
 	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/wsif-2.0/build/lib/wsif-j2c.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/rehearsal-0.5.jar"/>
+	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/log4j-1.2.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
