moved webservices and proxies related to the technician slip usecase to a technician package.

--- a/.classpath
+++ b/.classpath
@@ -1,87 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/bcprov-jdk15-144.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/binding-2.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/cajo-1.142.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/commons-cli-1.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/commons-httpclient-3.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/commons-io-1.3.2.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/cssparser-0.9.5.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/engine-gecko-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/engine-ie-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/engine-webkit-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/ext-xmlbeans-1.2.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/ezmorph-1.0.5.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/flex-messaging-common-1.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/flex-messaging-core-1.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/flex-messaging-opt-1.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/flex-messaging-proxy-1.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/flex-messaging-remoting-1.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/forms-1.0.7.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/groovy-all-1.8.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/hermes-1.14.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/htmlunit-2.7.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/htmlunit-core-js-2.7.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/j2ee-xmlbeans-1.4.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/javamail-1.4.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/jetty-6.1.26.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/jetty-util-6.1.26.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/jms-1.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/js-1.7R2.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/json-lib-2.2.2-jdk15.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/jsr173_1.0_api-xmlbeans-2.4.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/jtidy-r872-jdk15.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/jxbrowser-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/l2fprod-common-directorychooser-7.3.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/l2fprod-common-fontchooser-7.3.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/looks-2.2.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/MozillaGlue-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/MozillaInterfaces-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/nekohtml-1.9.14.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/not-yet-commons-ssl-0.3.11.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/opensaml-1.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/policy-xmlbeans-1.5.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/rsyntaxtextarea-1.3.4.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/saxon-9.1.0.8j.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/saxon-dom-9.1.0.8j.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/serializer-2.7.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/servlet-api-2.5-20081211.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/slf4j-api-1.5.8.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/slf4j-log4j12-1.5.8.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/soapui-xmlbeans-4.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/soap-xmlbeans-1.2.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/swingx-soapui.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/tuxpack-0.2.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/wadl-xmlbeans-1.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/winpack-3.8.2.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/wsdl4j-1.6.2-fixed.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/wss4j-1.5.8.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xalan-2.7.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xbean-fixed-2.4.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xbean_xpath-2.4.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xercesImpl-2.9.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xml-apis-2.9.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xmlpublic-2.4.0.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xmlsec-1.4.3.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xmlunit-1.2.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xom-1.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xstream-1.3.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xulrunner-linux64-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xulrunner-linux-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xulrunner-mac-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/lib/xulrunner-windows-2.8.28035.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/soapui-4.0.1/bin/soapui-4.0.1.jar"/>
-	<classpathentry kind="lib" path="/home/felps/Dropbox/Doutorado/Tese/workspace/AirportUseCase/.git/rehearsal-0.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="rehearsal-0.5.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/bcprov-jdk15-144.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/binding-2.0.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/cajo-1.142.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/commons-cli-1.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/commons-io-1.3.2.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/cssparser-0.9.5.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/engine-gecko-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/engine-ie-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/engine-webkit-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/ext-xmlbeans-1.2.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/ezmorph-1.0.5.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/flex-messaging-common-1.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/flex-messaging-core-1.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/flex-messaging-opt-1.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/flex-messaging-proxy-1.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/flex-messaging-remoting-1.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/forms-1.0.7.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/groovy-all-1.8.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/hermes-1.14.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/htmlunit-2.7.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/htmlunit-core-js-2.7.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/j2ee-xmlbeans-1.4.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/javamail-1.4.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/jms-1.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/js-1.7R2.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/json-lib-2.2.2-jdk15.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/jsr173_1.0_api-xmlbeans-2.4.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/jtidy-r872-jdk15.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/junit-4.4.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/jxbrowser-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/l2fprod-common-directorychooser-7.3.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/l2fprod-common-fontchooser-7.3.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/looks-2.2.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/MozillaGlue-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/MozillaInterfaces-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/nekohtml-1.9.14.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/not-yet-commons-ssl-0.3.11.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/opensaml-1.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/policy-xmlbeans-1.5.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/rsyntaxtextarea-1.3.4.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/saxon-9.1.0.8j.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/saxon-dom-9.1.0.8j.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/serializer-2.7.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/servlet-api-2.5-20081211.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/slf4j-api-1.5.8.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/slf4j-log4j12-1.5.8.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/soap-xmlbeans-1.2.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/soapui-xmlbeans-4.0.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/swingx-soapui.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/tuxpack-0.2.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/wadl-xmlbeans-1.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/winpack-3.8.2.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/wsdl4j-1.6.2-fixed.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/wss4j-1.5.8.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xalan-2.7.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xbean_xpath-2.4.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xbean-fixed-2.4.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xercesImpl-2.9.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xml-apis-2.9.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xmlpublic-2.4.0.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xmlsec-1.4.3.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xmlunit-1.2.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xom-1.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xstream-1.3.1.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xulrunner-linux-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xulrunner-linux64-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xulrunner-mac-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/lib/xulrunner-windows-2.8.28035.jar"/>
+	<classpathentry kind="lib" path="soapui-4.0.1/bin/soapui-4.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
